# jsx2html-mcp

./: .gitignore  README.md  pyproject.toml  server.py
assets/: template.html
scripts/: convert.py
